--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,10 +4,13 @@
     "next/typescript"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "prefer-const": "warn",
-    "no-console": "warn"
+    "no-console": "off",
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "react-hooks/rules-of-hooks": "off"
   },
   "ignorePatterns": [
     "node_modules/",
