--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "build": "next build",
     "start": "node .next/standalone/server.js",
     "lint": "next lint",
+    "type-check": "tsc --noEmit",
     "test": "jest",
+    "test:ci": "jest --ci --coverage",
     "test:e2e": "playwright test",
     "test:watch": "jest --watch",
     "security:audit": "npm audit",
