--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd backend
-          pytest tests/ -v --cov=app --cov-report=xml --cov-report=html
+          PYTHONPATH=$PYTHONPATH:. pytest tests/ -v --cov=app --cov-report=xml --cov-report=html
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
