Fix numpy build issues and create CI-compatible requirements
- Updated numpy to 1.24.3 for better compatibility
- Created requirements-ci.txt without pandas/numpy for CI
- Updated CI workflow to use CI-specific requirements
- Added installation script with proper build flags
- Added local test script for backend testing
- Fixed duplicate httpx dependency in requirements.txt

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -101,7 +101,7 @@ jobs:
         run: |
           cd backend
           pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements-ci.txt
 
       - name: Set up environment
         run: |
@@ -110,6 +110,7 @@ jobs:
           echo "DATABASE_URL=postgresql://synthos:testpass@localhost:5432/synthos_test" >> .env
           echo "REDIS_URL=redis://localhost:6379/0" >> .env
           echo "ANTHROPIC_API_KEY=test-key" >> .env
+          echo "SECRET_KEY=test-secret-key-for-ci" >> .env
 
       - name: Skip database migrations in CI
         run: |
@@ -119,7 +120,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           cd backend
-          PYTHONPATH=$PYTHONPATH:. pytest tests/ -v --cov=app --cov-report=xml --cov-report=html
+          PYTHONPATH=$PYTHONPATH:. pytest tests/ -v --cov=app --cov-report=xml --cov-report=html --tb=short
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
