--- a/backend/requirements-ci.txt
+++ b/backend/requirements-ci.txt
@@ -1,13 +1,12 @@
 # =============================================================================
-# SYNTHOS BACKEND DEPENDENCIES - OPTIMIZED FOR AWS APP RUNNER
-# Python 3.8 Compatible - Production Ready
+# SYNTHOS BACKEND CI DEPENDENCIES - LIGHTWEIGHT VERSION
+# Optimized for CI/CD environments with minimal dependencies
 # =============================================================================
 
-# Core FastAPI Framework (ESSENTIAL - Install first)
+# Core FastAPI Framework (ESSENTIAL)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.2
-pydantic[email]==2.5.2
 
 # Database & ORM (ESSENTIAL)
 sqlalchemy==2.0.25
@@ -50,10 +49,6 @@ python-json-logger==3.1.0
 # Payment Processing (ESSENTIAL)
 stripe==7.12.0
 
-# Data Processing (CORE ONLY - LIGHTWEIGHT)
-pandas==2.1.4
-numpy==1.24.3
-
 # File Handling (ESSENTIAL)
 aiofiles==24.1.0
 openpyxl==3.1.2
@@ -81,25 +76,6 @@ pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 
 # =============================================================================
-# AI/ML DEPENDENCIES (OPTIONAL - INSTALL ONLY IF NEEDED)
-# These packages are large and may cause build timeouts
-# They will be installed with best effort, failures are acceptable
-# =============================================================================
-
-# Uncomment these lines only if AI/ML features are required:
-# torch==2.1.2+cpu --find-links https://download.pytorch.org/whl/torch_stable.html
-# transformers==4.37.2
-# scikit-learn==1.3.2
-
-# =============================================================================
-# LIGHTWEIGHT ALTERNATIVES (OPTIONAL)
-# These provide similar functionality with smaller footprint
-# =============================================================================
-
-# For basic ML tasks without PyTorch:
-# scikit-learn==1.3.2
-
-# For text processing without transformers:
-# nltk==3.8.1 
-
-
+# NOTE: pandas and numpy are excluded for CI to avoid build issues
+# These can be installed separately in production if needed
+# ============================================================================= 
