Improve E2E database connectivity with better debugging
- Enhanced start_for_e2e.sh with better database startup handling
- Added Docker service detection and auto-startup
- Increased timeout periods (60 attempts for DB, 15 for server)
- Added comprehensive debugging information on failure
- Created debug_ci_environment.sh for CI environment troubleshooting
- Added debug step to CI workflow before backend startup
- Improved error messages with Docker container logs and network info
- Added automatic database/user creation at specific intervals
- Better separation of PostgreSQL availability vs database readiness

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -229,7 +229,12 @@ jobs:
         run: |
           # Start required services using available docker-compose
           docker-compose up -d postgres redis || docker compose up -d postgres redis
-          sleep 10
+          sleep 15
+
+      - name: Debug environment
+        run: |
+          cd backend
+          ./debug_ci_environment.sh
 
       - name: Set up backend for E2E
         run: |
