Fix E2E database authentication and missing prometheus_client dependency
- Added prometheus-client==0.19.0 to requirements-minimal.txt
- Fixed database URL defaults in alembic/env.py to use correct credentials
- Fixed database URL default in app/core/config.py to use correct credentials
- All database URLs now use synthos:securepassword123@localhost:5432/synthos_db
- This resolves the 'password authentication failed for user username' error
- This resolves the 'No module named prometheus_client' error

--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -45,6 +45,7 @@ openai==1.12.0
 sentry-sdk[fastapi]==1.40.6
 structlog==23.2.0
 python-json-logger==3.1.0
+prometheus-client==0.19.0
 
 # Payment Processing (ESSENTIAL)
 stripe==7.12.0
