Fix pandas import issues for E2E testing with optional imports
- Updated all pandas imports to use optional_imports.py fallback
- Added scipy==1.11.4 to requirements-minimal.txt for statistical functions
- Modified claude_agent.py to use optional pandas/numpy imports
- Updated privacy_engine.py, generation.py, enhanced_realism_engine.py
- Updated datasets.py, multi_model_agent.py, custom_model_service.py
- All data processing modules now gracefully handle missing pandas/numpy
- This resolves the 'No module named pandas' error in E2E tests
- Maintains functionality with fallback when pandas is not available

--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -76,6 +76,9 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-asyncio==0.21.1
 
+# Scientific Computing (ESSENTIAL for data analysis)
+scipy==1.11.4
+
 # =============================================================================
 # NOTE: This is a minimal version for CI/E2E testing
 # pandas and numpy are excluded to avoid build issues
