--- a/backend/requirements-minimal.txt
+++ b/backend/requirements-minimal.txt
@@ -57,6 +57,7 @@ openpyxl==3.1.2
 # HTTP Clients (ESSENTIAL)
 httpx==0.26.0
 requests==2.31.0
+aiohttp==3.9.1
 
 # Environment & Configuration (ESSENTIAL)
 python-decouple==3.8
