--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,2 @@
-# Synthos Backend Environment Configuration
-ENVIRONMENT=development
-DATABASE_URL=postgresql://username:password@localhost:5432/synthos
-REDIS_URL=redis://localhost:6379/0
-ANTHROPIC_API_KEY=your-anthropic-api-key
+# Database Configuration
+DATABASE_URL=postgresql://synthos:securepassword123@localhost:5432/synthos_db
