--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -9,10 +9,9 @@ addopts =
     --strict-markers
     --disable-warnings
 markers =
-    payment: marks tests as payment related
+    slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
-    performance: marks tests as performance tests
-    slow: marks tests as slow running
+    unit: marks tests as unit tests
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning 
