--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -227,6 +227,13 @@ jobs:
 
       - name: Start services
         run: |
+          # Set default environment variables to avoid warnings
+          export ANTHROPIC_API_KEY="test-key"
+          export STRIPE_SECRET_KEY="test-key"
+          export AWS_ACCESS_KEY_ID="test-key"
+          export AWS_SECRET_ACCESS_KEY="test-key"
+          export NEXT_PUBLIC_STRIPE_PUBLIC_KEY="test-key"
+          
           # Start required services using available docker-compose
           docker-compose up -d postgres redis || docker compose up -d postgres redis
           sleep 15
@@ -244,8 +251,14 @@ jobs:
       - name: Start frontend for E2E
         run: |
           cd frontend
-          cp .env.example .env.local
-          echo "NEXT_PUBLIC_API_URL=http://localhost:8000" >> .env.local
+          # Create .env.local if .env.example doesn't exist
+          if [ ! -f .env.example ]; then
+            echo "NEXT_PUBLIC_API_URL=http://localhost:8000" > .env.local
+            echo "NEXT_PUBLIC_WS_URL=ws://localhost:8000" >> .env.local
+          else
+            cp .env.example .env.local
+            echo "NEXT_PUBLIC_API_URL=http://localhost:8000" >> .env.local
+          fi
           npm run build
           npm start &
 
@@ -287,7 +300,15 @@ jobs:
 
       - name: Start services for load testing
         run: |
-          docker-compose up -d || docker compose up -d
+          # Set default environment variables to avoid warnings
+          export ANTHROPIC_API_KEY="test-key"
+          export STRIPE_SECRET_KEY="test-key"
+          export AWS_ACCESS_KEY_ID="test-key"
+          export AWS_SECRET_ACCESS_KEY="test-key"
+          export NEXT_PUBLIC_STRIPE_PUBLIC_KEY="test-key"
+          
+          # Start services using available docker-compose
+          docker-compose up -d postgres redis || docker compose up -d postgres redis
           sleep 30
 
       - name: Run load tests
