--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 alembic==1.13.1
 asyncpg==0.29.0
+aiosqlite==0.20.0
 
 # Authentication & Security (ESSENTIAL)
 passlib[bcrypt]==1.7.4
