Update frontend configuration and improve sign-in functionality: change npm registry to official source, enhance TypeScript settings for stricter checks, and refactor sign-in page to include 'remember me' functionality and improved error handling.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -45,7 +45,12 @@
     "types": [
       "node"
     ],
-    "target": "ES2017"
+    "target": "ES2017",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "next-env.d.ts",
