--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -507,12 +507,13 @@ jobs:
           curl -f http://$ALB_DNS/api/v1/health || echo "API health check failed, but deployment may still be successful"
 
       - name: Send deployment notification
-        if: always() && secrets.SLACK_WEBHOOK_URL
+        if: always()
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
           channel: '#deployments'
           webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        continue-on-error: true
 
   # Performance monitoring
   monitor:
