--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,6 +54,7 @@ stripe==7.12.0
 # Data Processing (CORE ONLY - LIGHTWEIGHT)
 pandas==2.1.4
 numpy==1.24.3
+scipy==1.11.4
 
 # File Handling (ESSENTIAL)
 aiofiles==24.1.0
@@ -62,6 +63,7 @@ openpyxl==3.1.2
 # HTTP Clients (ESSENTIAL)
 httpx==0.26.0
 requests==2.31.0
+aiohttp==3.9.1
 
 # Environment & Configuration (ESSENTIAL)
 python-decouple==3.8
@@ -72,9 +74,11 @@ pytz==2024.1
 
 # System Monitoring (ESSENTIAL)
 psutil==5.9.8
+prometheus_client==0.19.0
 
 # Data Validation (ESSENTIAL)
 marshmallow==3.20.2
+sqlparse==0.4.4
 
 # Testing Dependencies (ESSENTIAL)
 pytest==7.4.3
